[gd_scene load_steps=3 format=3 uid="uid://b5y5fikiejnja"]

[ext_resource type="Script" path="res://game_over_screen.gd" id="1_6ed0y"]
[ext_resource type="Texture2D" uid="uid://cw8x58db8miqp" path="res://Sprites/Background/game_over_pantalla.jpg" id="1_gfsao"]

[node name="GameOverScreen" type="Node2D"]
position = Vector2(116, 48)
script = ExtResource("1_6ed0y")

[node name="GameOverPantalla" type="Sprite2D" parent="."]
position = Vector2(458.5, 277.5)
scale = Vector2(0.598437, 0.597222)
texture = ExtResource("1_gfsao")

[node name="MessageLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.423529, 0.721569, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Oh no! Monkey cannot go on... But the Cyclothon must continue!"

[node name="HighScoreLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = 164.0
offset_right = 996.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.423529, 0.721569, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Highest Funds Raised $"

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -89.0
offset_top = 218.0
offset_right = 994.0
offset_bottom = 267.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.423529, 0.721569, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Funds Raised $"

[node name="Try Again" type="Button" parent="."]
offset_left = 178.0
offset_top = 292.0
offset_right = 378.0
offset_bottom = 402.0
text = "TRY AGAIN"

[node name="Quit" type="Button" parent="."]
offset_left = 599.0
offset_top = 299.0
offset_right = 799.0
offset_bottom = 409.0
text = "QUIT"

[connection signal="pressed" from="Try Again" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
